--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -1,21 +1,11 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/arvindson/celi/blob/main/fooocus_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "VjYy0F2gZIPR",
-        "outputId": "420ffa1d-6a8d-4c20-e29c-e47f67cdf01f",
+        "outputId": "b35bb269-ce03-4355-a81c-48c257e9ddbf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -30,12 +20,12 @@
             "Requirement already satisfied: cffi>=1.16.0 in /usr/local/lib/python3.11/dist-packages (from pygit2==1.15.1) (1.17.1)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.16.0->pygit2==1.15.1) (2.22)\n",
             "Downloading pygit2-1.15.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (5.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m40.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m94.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pygit2\n",
             "  Attempting uninstall: pygit2\n",
-            "    Found existing installation: pygit2 1.16.0\n",
-            "    Uninstalling pygit2-1.16.0:\n",
-            "      Successfully uninstalled pygit2-1.16.0\n",
+            "    Found existing installation: pygit2 1.17.0\n",
+            "    Uninstalling pygit2-1.17.0:\n",
+            "      Successfully uninstalled pygit2-1.17.0\n",
             "Successfully installed pygit2-1.15.1\n",
             "/content\n",
             "Cloning into 'Fooocus'...\n",
@@ -43,8 +33,8 @@
             "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
             "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
             "remote: Total 6725 (delta 2), reused 0 (delta 0), pack-reused 6721 (from 3)\u001b[K\n",
-            "Receiving objects: 100% (6725/6725), 33.27 MiB | 27.52 MiB/s, done.\n",
-            "Resolving deltas: 100% (3876/3876), done.\n",
+            "Receiving objects: 100% (6725/6725), 33.27 MiB | 15.55 MiB/s, done.\n",
+            "Resolving deltas: 100% (3875/3875), done.\n",
             "/content/Fooocus\n",
             "Already up-to-date\n",
             "Update succeeded.\n",
@@ -69,8 +59,7 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
