--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -1,14 +1,24 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/arvindson/celi/blob/main/fooocus_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "VjYy0F2gZIPR",
-        "outputId": "b35bb269-ce03-4355-a81c-48c257e9ddbf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b35bb269-ce03-4355-a81c-48c257e9ddbf"
       },
       "outputs": [
         {
@@ -42,7 +52,68 @@
             "Python 3.11.11 (main, Dec  4 2024, 08:55:07) [GCC 11.4.0]\n",
             "Fooocus version: 2.5.5\n",
             "Error checking version for torchsde: No package metadata was found for torchsde\n",
-            "Installing requirements\n"
+            "Installing requirements\n",
+            "[Cleanup] Attempting to delete content of temp dir /tmp/fooocus\n",
+            "[Cleanup] Cleanup successful\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/xlvaeapp.pth\" to /content/Fooocus/models/vae_approx/xlvaeapp.pth\n",
+            "\n",
+            "100% 209k/209k [00:00<00:00, 45.8MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/vaeapp_sd15.pt\" to /content/Fooocus/models/vae_approx/vaeapp_sd15.pth\n",
+            "\n",
+            "100% 209k/209k [00:00<00:00, 41.4MB/s]\n",
+            "Downloading: \"https://huggingface.co/mashb1t/misc/resolve/main/xl-to-v1_interposer-v4.0.safetensors\" to /content/Fooocus/models/vae_approx/xl-to-v1_interposer-v4.0.safetensors\n",
+            "\n",
+            "100% 5.40M/5.40M [00:00<00:00, 44.4MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/fooocus_expansion.bin\" to /content/Fooocus/models/prompt_expansion/fooocus_expansion/pytorch_model.bin\n",
+            "\n",
+            "100% 335M/335M [00:01<00:00, 237MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/fav_models/resolve/main/fav/juggernautXL_v8Rundiffusion.safetensors\" to /content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors\n",
+            "\n",
+            "100% 6.62G/6.62G [00:34<00:00, 208MB/s]\n",
+            "Downloading: \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_offset_example-lora_1.0.safetensors\" to /content/Fooocus/models/loras/sd_xl_offset_example-lora_1.0.safetensors\n",
+            "\n",
+            "100% 47.3M/47.3M [00:00<00:00, 258MB/s]\n",
+            "Total VRAM 15095 MB, total RAM 12979 MB\n",
+            "Set vram state to: HIGH_VRAM\n",
+            "Always offload VRAM\n",
+            "Device: cuda:0 Tesla T4 : native\n",
+            "VAE dtype: torch.float32\n",
+            "Using pytorch cross attention\n",
+            "Refiner unloaded.\n",
+            "Running on local URL:  http://127.0.0.1:7865\n",
+            "IMPORTANT: You are using gradio version 3.41.2, however version 4.44.1 is available, please upgrade.\n",
+            "--------\n",
+            "model_type EPS\n",
+            "UNet ADM Dimension 2816\n",
+            "Running on public URL: https://83536a4c9623fd412c.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n",
+            "Using pytorch attention in VAE\n",
+            "Working with z of shape (1, 4, 32, 32) = 4096 dimensions.\n",
+            "Using pytorch attention in VAE\n",
+            "extra {'cond_stage_model.clip_l.logit_scale', 'cond_stage_model.clip_l.text_projection'}\n",
+            "left over keys: dict_keys(['cond_stage_model.clip_l.transformer.text_model.embeddings.position_ids'])\n",
+            "loaded straight to GPU\n",
+            "Requested to load SDXL\n",
+            "Loading 1 new model\n",
+            "Base model loaded: /content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors\n",
+            "VAE loaded: None\n",
+            "Request to load LoRAs [('sd_xl_offset_example-lora_1.0.safetensors', 0.1)] for model [/content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors].\n",
+            "Loaded LoRA [/content/Fooocus/models/loras/sd_xl_offset_example-lora_1.0.safetensors] for UNet [/content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors] with 788 keys at weight 0.1.\n",
+            "Fooocus V2 Expansion: Vocab with 642 words.\n",
+            "Fooocus Expansion engine loaded for cuda:0, use_fp16 = True.\n",
+            "Requested to load SDXLClipModel\n",
+            "Requested to load GPT2LMHeadModel\n",
+            "Loading 2 new models\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.59 seconds\n",
+            "2025-02-12 18:04:53.585061: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+            "E0000 00:00:1739383493.819836    4951 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1739383493.883196    4951 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2025-02-12 18:04:54.383339: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "Started worker with PID 3949\n",
+            "App started successful. Use the app with http://127.0.0.1:7865/ or 127.0.0.1:7865 or https://83536a4c9623fd412c.gradio.live\n"
           ]
         }
       ],
@@ -59,7 +130,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
